--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,12 @@
       {
         "aria-valid-attr-value": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
