--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "mysql2": "^3.11.3",
     "next": "^15.3.1",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
