--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,8 +1,5 @@
 # Your WordPress site URL
-NEXT_PUBLIC_WORDPRESS_URL=https://faustexample.wpengine.com
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
 
 # Plugin secret found in WordPress Settings->Headless
-# FAUST_SECRET_KEY=YOUR_PLUGIN_SECRET
-
-# The URL of your site, used by Faust for sitemap generation, however you can name this whatever you want.
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+FAUST_SECRET_KEY=336334e67-3a02-4f85-9594-24256fa98ae5
