--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:format": "prettier . --check"
   },
   "dependencies": {
-    "@apollo/client": "^3.14.0",
+    "@apollo/client": "3.13.0",
     "@faustwp/core": "^3.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "clsx": "^2.1.1",
