--- a/.env.local
+++ b/.env.local
@@ -7,6 +7,8 @@ FAUST_SECRET_KEY=4db8e045-2766-486f-943b-10239c974a01
 
 # MySQL connection for patient API
 MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DATABASE=la-trobe
+
