--- a/.env.local
+++ b/.env.local
@@ -1,14 +1,18 @@
-# The URL of your site, used by Faust for sitemap generation, however you can name this whatever you want.
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
+# Front-end site URL used by Faust (sitemap, previews, etc.)
+NEXT_PUBLIC_SITE_URL=https://pact-la-trobe.vercel.app
+
+# WordPress GraphQL endpoint
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
 
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=4db8e045-2766-486f-943b-10239c974a01
 
-
 # MySQL connection for patient API
-MYSQL_HOST=127.0.0.1
-MYSQL_PORT=3306
-MYSQL_USER=root
+MYSQL_HOST=wp-pactlatrobedev.wpenginepowered.com
+MYSQL_PORT=13306
+MYSQL_USER=wp_pactlatrobedev
 MYSQL_PASSWORD=
-MYSQL_DATABASE=la-trobe
+MYSQL_DATABASE=wp_pactlatrobedev
+MYSQL_SSL=true
+MYSQL_SSL_REJECT_UNAUTHORIZED=false
 
