--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # Front-end site URL used by Faust (sitemap, previews, etc.)
-NEXT_PUBLIC_SITE_URL=https://pact-la-trobe.vercel.app
+NEXT_PUBLIC_SITE_URL=https://pactlatrobedev.wpenginepowered.com
 
 # WordPress GraphQL endpoint
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
