--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,5 @@
-# Front-end site URL used by Faust (sitemap, previews, etc.)
-NEXT_PUBLIC_SITE_URL=https://pactlatrobedev.wpenginepowered.com
-
-# WordPress GraphQL endpoint
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
+# The URL of your site, used by Faust for sitemap generation, however you can name this whatever you want.
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
 
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=4db8e045-2766-486f-943b-10239c974a01
