--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,6 @@
 # The URL of your site, used by Faust for sitemap generation, however you can name this whatever you want.
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
+NEXT_PUBLIC_SITE_URL=https://pact-la-trobe.vercel.app/
 
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=4db8e045-2766-486f-943b-10239c974a01
