--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,9 +1,10 @@
-# The URL of your site, used by Faust for sitemap generation, however you can name this whatever you want.
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
-# Plugin secret found in WordPress Settings->Headless
-FAUST_SECRET_KEY=4db8e045-2766-486f-943b-10239c974a01
-# MySQL connection for patient API
-MYSQL_HOST=127.0.0.1
-MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DATABASE=la-trobe
+FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
+
+MYSQL_HOST=wp-pactlatrobedev.wpenginepowered.com  # replace with external DB host
+MYSQL_PORT=13306
+MYSQL_USER=pactlatrobedev
+MYSQL_PASSWORD=Z2Aq8ctI-LYymNqP3zyT
+MYSQL_DATABASE=wp_pactlatrobedev
+MYSQL_SSL=true
+MYSQL_SSL_REJECT_UNAUTHORIZED=false
