--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,10 +1,5 @@
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
-FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
+# Your WordPress site URL
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
 
-MYSQL_HOST=wp-pactlatrobedev.wpenginepowered.com  # replace with external DB host
-MYSQL_PORT=13306
-MYSQL_USER=pactlatrobedev
-MYSQL_PASSWORD=Z2Aq8ctI-LYymNqP3zyT
-MYSQL_DATABASE=wp_pactlatrobedev
-MYSQL_SSL=true
-MYSQL_SSL_REJECT_UNAUTHORIZED=false
+# Plugin secret found in WordPress Settings->Headless
+FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
