--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
 
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
-FAUST_FRONTEND_URL=https://pact-la-trobe.vercel.app
+FAUST_FRONTEND_URL=http://localhost:3000
