--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,9 @@
 # Your WordPress site URL
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
+
+# Domain for newsletter API
+NEXT_PUBLIC_WP_URL=https://pactlatrobedev.wpenginepowered.com
+
 
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
