--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,8 @@
-# Your WordPress site URL
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
+# WordPress site ROOT (no trailing slash, no /graphql)
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
 
-# Domain for newsletter API
-NEXT_PUBLIC_WP_URL=https://pactlatrobedev.wpenginepowered.com
+# Your front-end site URL (local dev)
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
 
-
-# Plugin secret found in WordPress Settings->Headless
+# Faust secret (must match WP Admin → Settings → Headless/Faust)
 FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
