--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,4 +1,7 @@
 # Your WordPress site URL
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
+
+# Your WordPress site URL
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
 
 # Plugin secret found in WordPress Settings->Headless
