--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,5 +1,5 @@
 # Your WordPress site URL
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/graphql
+NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/
 
 # Your WordPress site URL
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
