--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "wordpress-hash-node": "^1.0.0"
   },
   "devDependencies": {
     "@faustwp/cli": "^3.3.1",
