--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@apollo/client": "3.13.0",
     "@faustwp/core": "^3.2.3",
     "@tailwindcss/postcss": "^4.1.12",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.15.2",
     "next": "^15.3.1",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@faustwp/cli": "^3.3.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "cross-env": "^10.0.0",
