--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,4 @@
 # Your WordPress site URL
-NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com/
-# Your WordPress site URL
 NEXT_PUBLIC_WORDPRESS_URL=https://pactlatrobedev.wpenginepowered.com
 # Plugin secret found in WordPress Settings->Headless
 FAUST_SECRET_KEY=a58a0922-705b-4505-8c20-f53d51bb3b16
@@ -10,3 +8,6 @@ MYSQL_PORT=3307
 MYSQL_USER=pactlatrobedev
 MYSQL_PASSWORD=Z2Aq8ctI-LYymNqP3zyT
 MYSQL_DATABASE=wp_pactlatrobedev
+
+JWT_COOKIE_NAME=wpToken
+JWT_COOKIE_MAX_AGE=3600
