--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "graphql": "^16.11.0",
     "mysql2": "^3.15.2",
     "next": "^15.3.1",
